<resources>
    <string name="app_name">Movesets GO</string>
    <string name="developer_name" translatable="false">Ruan Reis</string>
    <string name="developer_email" translatable="false">ruanvictorreis@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="version">Version 2.0</string>

    <string name="pokemon_name" translatable="false">Pokemon Name</string>
    <string name="pokemon_number" translatable="false">#number</string>
    <string name="loading">Loading&#8230;</string>
    <string name="moveset_damage_percent" translatable="false">100%</string>

    <string name="basic_attack">Basic Attack</string>
    <string name="charge_attack">Charge Attack</string>
    <string name="ranking_position" translatable="false">1º</string>
    <string name="moveset_damage" translatable="false">DPS</string>

    <string name="title_activity_moveset" translatable="false">Moveset Activity</string>

    <string name="symbol" translatable="false">º</string>
    <string name="search_pokemon">Search</string>
    <string name="remove">Remove</string>

    <string name="to_attack">To Attack</string>
    <string name="to_defend">To Defend</string>

    <string name="type_pokemon">Pokémon Types</string>
    <string name="about">About the app</string>
    <string name="communicate">Communicate</string>
    <string name="developer">Developer</string>
    <string name="app">App</string>

    <string name="graphics">Graphics</string>
    <string name="graphics_provider">Graphics Provided by Vecteezy!</string>
    <string name="graphics_site" translatable="false">https://www.vecteezy.com</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-1666278822086343~6483933915</string>
    <string name="stats_banner" translatable="false">ca-app-pub-1666278822086343/4812222330</string>
    <string name="banner_home_footer" translatable="false">ca-app-pub-1666278822086343/9562581914</string>
    <string name="banner_pokemon_types" translatable="false">ca-app-pub-1666278822086343/2061906312</string>
    <string name="attack_banner_movesets" translatable="false">ca-app-pub-1666278822086343/8585376313</string>
    <string name="defense_banner_movesets" translatable="false">ca-app-pub-1666278822086343/7643180053</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_pokemon_type">Types</string>
    <string name="ok" translatable="false">OK</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="stamina" translatable="false">Stamina</string>
    <string name="overall" translatable="false">Overall</string>
    <string name="max_cp" translatable="false">Max. CP</string>
    <string name="min_cp" translatable="false">Min. CP</string>
    <string name="pokedex" translatable="false">Pokedex</string>
    <string name="order_by_number">Sort by number</string>
    <string name="order_by_name">Sort by name</string>
    <string name="order_by_max_cp">Sort by CP</string>
    <string name="strong_against">Resistance:</string>
    <string name="weak_against">Weakness:</string>
    <string name="order_preference" translatable="false">order_preference</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="show_legacy_movesets">Show legacy movesets</string>
    <string name="added_to_favorites">added to favorites</string>
    <string name="favorites">Favorites</string>
    <string name="hashtag" translatable="false">#</string>
    <string name="title_activity_get_premium" translatable="false">Movesets GO Premium</string>
    <string name="get_premium">Premium Version</string>
    <string name="no_ads">- No ads</string>
    <string name="picture_of_pokemon">- Picture of the Pokemon (Coming soon)</string>
    <string name="pro_ads_dialog" translatable="false">pro_ads_dialog</string>
    <string name="hello_pokemon_trainer">Hello, Pokémon trainer!</string>
    <string name="pro_ads_message">Would you like to remove the ads? Check out the premium version of Movesets GO!</string>
    <string name="yeah_go">Yes, let\'s go!</string>
    <string name="no_thanks">No thanks</string>
    <string name="promotional_codes">Promotional Codes</string>
    <string name="title_activity_promotional_codes">PromotionalCodesActivity</string>
    <string name="removed">Removed</string>
    <string name="number_access" translatable="false">number_access</string>
    <string name="allow_pokemon_image" translatable="false">allow_pokemon_image</string>
    <string name="show_available_movesets">Show available movesets</string>
    <string name="show_tms_movesets">Show TMs combinations</string>
    <string name="pokemon_stats">Stats</string>
    <string name="community_day">Community Day</string>

</resources>
