<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_magnify_white_24dp"
        android:title="@string/search_pokemon"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_order_by_number"
        android:orderInCategory="100"
        android:title="@string/order_by_number"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order_by_name"
        android:orderInCategory="100"
        android:title="@string/order_by_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order_max_cp"
        android:orderInCategory="100"
        android:title="@string/order_by_max_cp"
        app:showAsAction="never" />
</menu>