<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pokeball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/pokedex"
            android:src="@drawable/ic_pokeball_grey600_24dp" />

        <TextView
            android:id="@+id/pokemon_name"
            style="@style/LargeLabelTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/pokeball"
            android:layout_toRightOf="@+id/pokeball"
            android:text="@string/pokemon_name" />

        <TextView
            android:id="@+id/pokemon_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/pokemon_number"
            android:textColor="@color/colorGray"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/activity_vertical_half_margin"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/labels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack" />

            <TextView
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_half_margin"
                android:text="@string/defense" />

            <TextView
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_half_margin"
                android:text="@string/stamina" />

            <TextView
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_half_margin"
                android:text="@string/overall" />

            <TextView
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_half_margin"
                android:text="@string/max_cp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/attack"
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_number" />

            <TextView
                android:id="@+id/defense"
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_half_margin"
                android:text="@string/pokemon_number" />

            <TextView
                android:id="@+id/stamina"
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_half_margin"
                android:text="@string/pokemon_number" />

            <TextView
                android:id="@+id/overall"
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_half_margin"
                android:text="@string/pokemon_number" />

            <TextView
                android:id="@+id/maxCp"
                style="@style/MoveLabelTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_half_margin"
                android:text="@string/pokemon_number" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>