<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/pokemon_name"
        style="@style/LargeLabelTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/removeButton"
        android:text="@string/pokemon_name" />

    <ImageView
        android:id="@+id/pokemonTypeOne"
        android:layout_width="@dimen/type_icon_size"
        android:layout_height="@dimen/type_icon_size"
        android:layout_below="@+id/pokemon_name"
        android:layout_marginTop="@dimen/activity_vertical_half_margin"
        android:contentDescription="@string/type_pokemon" />

    <ImageView
        android:id="@+id/pokemonTypeTwo"
        android:layout_width="@dimen/type_icon_size"
        android:layout_height="@dimen/type_icon_size"
        android:layout_below="@+id/pokemon_name"
        android:layout_marginLeft="@dimen/activity_horizontal_half_margin"
        android:layout_marginStart="@dimen/activity_horizontal_half_margin"
        android:layout_marginTop="@dimen/activity_vertical_half_margin"
        android:layout_toEndOf="@+id/pokemonTypeOne"
        android:layout_toRightOf="@+id/pokemonTypeOne"
        android:contentDescription="@string/type_pokemon" />

    <TextView
        android:id="@+id/pokemon_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pokemon_name"
        android:text="@string/pokemon_number"
        android:textColor="@color/colorGray"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:clickable="false"
        android:contentDescription="@string/remove"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:src="@drawable/ic_close_grey600_18dp" />

</RelativeLayout>